--- a/fronted/package.json
+++ b/fronted/package.json
@@ -47,6 +47,7 @@
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
+    "serve": "^14.2.3",
     "slick-carousel": "^1.8.1",
     "webfontloader": "^1.6.28"
   },
