--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "node app.js",
       "dev": "nodemon app.js",
-      "build": "babel src -d dist" 
+      "build": "next build" 
       
     
       
