--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "node app.js",
-      "dev": "nodemon app.js",
-      "build": "next build" 
+      "dev": "nodemon app.js"
       
     
       
