--- a/fronted/package.json
+++ b/fronted/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mindinventory/order-tracking": "^1.0.2",
     "@mui/icons-material": "^5.16.6",
-    "@mui/material": "^5.16.6",
+    "@mui/material": "^5.16.7",
     "@mui/styles": "^5.16.6",
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.4.0",
@@ -34,7 +36,7 @@
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.1.3",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icon": "^1.0.0",
     "react-icons": "^3.11.0",
